<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="357dp"
        android:layout_height="114dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/textFrag"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/codQR"
        android:layout_width="298dp"
        android:layout_height="222dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/btn_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="204dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_transfe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <Button
        android:id="@+id/btn_code"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginBottom="9dp"
        android:text="@string/btn_scan"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codQR" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="17dp"
        android:text="@string/textCod"
        app:layout_constraintBottom_toTopOf="@+id/codQR"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextNumberBill"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/textBill"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_code" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/textBillAmount"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btn_transfer"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberBill"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberBill" />

</androidx.constraintlayout.widget.ConstraintLayout>