<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="186dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMainLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img2" />

    <TextView
        android:id="@+id/textView"
        style="@style/CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="79dp"
        android:gravity="center"
        android:text="@string/main_tittle"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMainSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="252dp"
        android:text="@string/main_btnlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMainSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMainSign"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="252dp"
        android:text="@string/main_btnsign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMainLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>